--- a/project.properties
+++ b/project.properties
@@ -11,5 +11,5 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-19
-android.library.reference.1=../appcompat_v7
+target=android-15
+android.library.reference.1=../../../.android-sdk-linux/extras/android/support/v7/appcompat
