--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,13 +9,24 @@
         android:targetSdkVersion="19" />
 
     <application
-        android:name="MLBApplication"
+        android:name="es.ucm.pad.teamjvr.mylittlebusiness.MLBApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
             android:name="es.ucm.pad.teamjvr.mylittlebusiness.ProductListActivity"
             android:label="@string/title_activity_product_list" >
+        </activity>
+        <activity
+            android:name="es.ucm.pad.teamjvr.mylittlebusiness.AddProductActivity"
+            android:label="@string/title_activity_add_product" >
+             <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="es.ucm.pad.teamjvr.mylittlebusiness.ProductListActivity" />
+        </activity>
+        <activity
+            android:name="es.ucm.pad.teamjvr.mylittlebusiness.SplashActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,8 +34,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="es.ucm.pad.teamjvr.mylittlebusiness.AddProductActivity"
-            android:label="@string/title_activity_add_product" >
+            android:name="es.ucm.pad.teamjvr.mylittlebusiness.ProductDetailsActivity"
+            android:label="@string/title_activity_product_details" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="es.ucm.pad.teamjvr.mylittlebusiness.ProductListActivity" />
         </activity>
     </application>
 
