add SearchView o action bar

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,8 +16,11 @@
         android:theme="@android:style/Theme.Holo" >
         <activity
             android:name="es.ucm.pad.teamjvr.mylittlebusiness.ProductListActivity"
-            android:label="@string/title_activity_product_list"
-             >
+            android:label="@string/title_activity_product_list" >
+
+            <meta-data android:name="android.app.searchable"
+                   android:resource="@xml/searchable"/>
+                        
         </activity>
         <activity
             android:name="es.ucm.pad.teamjvr.mylittlebusiness.AddProductActivity"
