--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,20 +12,19 @@
         android:name="es.ucm.pad.teamjvr.mylittlebusiness.MLBApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" 
+        android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo" >
         <activity
             android:name="es.ucm.pad.teamjvr.mylittlebusiness.ProductListActivity"
             android:label="@string/title_activity_product_list" >
-
-            <meta-data android:name="android.app.searchable"
-                   android:resource="@xml/searchable"/>
-                        
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
         </activity>
         <activity
             android:name="es.ucm.pad.teamjvr.mylittlebusiness.AddProductActivity"
             android:label="@string/title_activity_add_product" >
-             <meta-data
+            <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="es.ucm.pad.teamjvr.mylittlebusiness.ProductListActivity" />
         </activity>
@@ -45,6 +44,10 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="es.ucm.pad.teamjvr.mylittlebusiness.ProductListActivity" />
+        </activity>
+        <activity
+            android:name="es.ucm.pad.teamjvr.mylittlebusiness.AboutMLBActivity"
+            android:label="@string/title_activity_about_mlb" >
         </activity>
     </application>
 
