--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,27 +9,27 @@
         android:targetSdkVersion="19" />
 
     <application
-        android:name="es.ucm.pad.teamjvr.mylittlebusiness.MLBApplication"
+        android:name="es.ucm.pad.teamjvr.mylittlebusiness.activity.MLBApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo" >
         <activity
-            android:name="es.ucm.pad.teamjvr.mylittlebusiness.ProductListActivity"
+            android:name="es.ucm.pad.teamjvr.mylittlebusiness.activity.ProductListActivity"
             android:label="@string/title_activity_product_list" >
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
         <activity
-            android:name="es.ucm.pad.teamjvr.mylittlebusiness.AddProductActivity"
+        	android:name="es.ucm.pad.teamjvr.mylittlebusiness.activity.AddProductActivity"
             android:label="@string/title_activity_add_product" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="es.ucm.pad.teamjvr.mylittlebusiness.ProductListActivity" />
+                android:value="es.ucm.pad.teamjvr.mylittlebusiness.activity.ProductListActivity" />
         </activity>
         <activity
-            android:name="es.ucm.pad.teamjvr.mylittlebusiness.SplashActivity"
+            android:name="es.ucm.pad.teamjvr.mylittlebusiness.activity.SplashActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,33 +38,32 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="es.ucm.pad.teamjvr.mylittlebusiness.ProductDetailsActivity"
+            android:name="es.ucm.pad.teamjvr.mylittlebusiness.activity.ProductDetailsActivity"
             android:label="@string/title_activity_product_details"
             android:windowSoftInputMode="stateUnchanged" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="es.ucm.pad.teamjvr.mylittlebusiness.ProductListActivity" />
+                android:value="es.ucm.pad.teamjvr.mylittlebusiness.activity.ProductListActivity" />
         </activity>
         <activity
-            android:name="es.ucm.pad.teamjvr.mylittlebusiness.AboutMLBActivity"
+            android:name="es.ucm.pad.teamjvr.mylittlebusiness.activity.AboutMLBActivity"
             android:label="@string/title_activity_about_mlb" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="es.ucm.pad.teamjvr.mylittlebusiness.ProductListActivity" />
+                android:value="es.ucm.pad.teamjvr.mylittlebusiness.activity.ProductListActivity" />
         </activity>
-        <activity
-            android:name="es.ucm.pad.teamjvr.mylittlebusiness.SettingsActivity"
+        <activity 
+            android:name="es.ucm.pad.teamjvr.mylittlebusiness.activity.SettingsActivity"
             android:label="@string/title_activity_settings" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="es.ucm.pad.teamjvr.mylittlebusiness.ProductListActivity" />
+                android:value="es.ucm.pad.teamjvr.mylittlebusiness.activity.ProductListActivity" />
         </activity>
-        <activity
-            android:name="es.ucm.pad.teamjvr.mylittlebusiness.StatsActivity"
-            android:label="@string/title_activity_stats" >
+        <activity			android:name="es.ucm.pad.teamjvr.mylittlebusiness.activity.TopStatsActivity"
+            android:label="@string/title_activity_top_stats" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="es.ucm.pad.teamjvr.mylittlebusiness.ProductListActivity" />
+                android:value="es.ucm.pad.teamjvr.mylittlebusiness.activity.ProductListActivity" />
         </activity>
     </application>
 
