--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:targetSdkVersion="19" />
 
     <application
-        android:name="es.ucm.pad.teamjvr.mylittlebusiness.activity.MLBApplication"
+        android:name="es.ucm.pad.teamjvr.mylittlebusiness.MLBApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
